# gestion-empleados-por-capas

./: .env_example  .gitignore  instrucciones.md  main.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: docs.yml  release.yml
aplicacion/: aplicacion.html  index.html  reglas_departamento.py  search.js
aplicacion/aplicacion/: api.html  reglas_departamento.html  reglas_login.html
aplicacion/aplicacion/api/: mi_indicador.html
ci/: create-release.sh
documentacion/aplicacion/: reglas_login.md
documentacion/persistencia/: gestor_db.md
dominio/: empleado.py
persistencia/: conexion.py  gestor_db.py  index.html  persistencia.html  search.js
persistencia/persistencia/: conexion.html  departamento_dao.html  gestor_db.html
presentacion/: menu.py
sql/: schema.sql
src/: main.py
src/aplicacion/: reglas_departamento.py  reglas_empleado.py  reglas_login.py  reglas_usuario.py  servicios.py
src/aplicacion/api/: mi_indicador.py
src/config/: variables.py
src/configuracion/: auditoria.py  entorno.py  init_db.py
src/dominio/: departamento.py  empleado.py  excepciones.py  proyecto.py  usuario.py
src/persistencia/: conexion.py  departamento_dao.py  gestor_db.py  tipos.py  usuario_dao.py
src/persistencia/dao/: departamento_dao.py  empleado_dao.py  proyecto_dao.py  usuario_dao.py
src/presentacion/: menu.py  menu_departamento.py  menu_empleado.py  menu_principal.py  menu_proyecto.py  menu_servicio.py  menu_usuario.py  utilidades.py  validaciones.py
src/sql/: schema.sql
tools/: run.bat  run.sh  setup_venv.ps1  setup_venv.sh
