[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gestion-empleados-por-capas"
version = "0.1.0"
description = "Aplicación de consola para gestión de empleados (arquitectura por capas) ecotech solutions"
authors = [{name = "Marco Contreras", email = "contacto@mcherrera.dev"}]
readme = "readme.md"
requires-python = ">=3.9"
license = "MIT"

dependencies = [
	"PyMySQL==1.1.2",
	"requests==2.32.5",
	"python-dotenv==1.2.1"
]

[project.optional-dependencies]
docs = ["pdoc>=12.0"]


[tool.setuptools.packages.find]
where = ["src"]
include = ["aplicacion", "persistencia"]

[project.scripts]
init-db = "configuracion.init_db:inicializar_db"

